--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ document.documentElement.setAttribute('data-theme', window.localStorage.getItem(
   <div class="icons">
    <div class="row">
     <div class="col s2 center-align"><i class="material-icons quick-add personal">person</i></div>
-    <div class="col s3 center-align"><i class="material-icons quick-add" data-quick-add-type = "Household">spray-bottle</i></div>
+    <div class="col s3 center-align"><i class="mdi mdi-spray-bottle"></i></div>
     <div class="col s2 center-align"><i class="material-icons quick-add" data-quick-add-type = "General">add_circle</i></div>
 
 
