Month title update

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@ document.documentElement.setAttribute('data-theme', window.localStorage.getItem(
 
     <li>
         <ul class="collapsible">
-          <li><div class="collapsible-header"><i class="material-icons">calendar_today</i><span class="month-title">March</span></div>
+          <li><div class="collapsible-header"><i class="material-icons">calendar_today</i><span class="month-title">Month</span></div>
                 <div class="collapsible-body">
 
     <p class="month-switch">
@@ -101,6 +101,12 @@ document.documentElement.setAttribute('data-theme', window.localStorage.getItem(
       <label>
         <input name="group2" type="radio" value="May" />
         <span>May</span>
+      </label>
+    </p>
+    <p class="month-switch">
+      <label>
+        <input name="group2" type="radio" value="June" />
+        <span>June</span>
       </label>
     </p>
   </div></li>
