--- a/index.html
+++ b/index.html
@@ -109,6 +109,42 @@ document.documentElement.setAttribute('data-theme', window.localStorage.getItem(
         <span>June</span>
       </label>
     </p>
+     <p class="month-switch">
+      <label>
+        <input name="group2" type="radio" value="July" />
+        <span>July</span>
+      </label>
+    </p>
+     <p class="month-switch">
+      <label>
+        <input name="group2" type="radio" value="August" />
+        <span>August</span>
+      </label>
+    </p>
+     <p class="month-switch">
+      <label>
+        <input name="group2" type="radio" value="September" />
+        <span>September</span>
+      </label>
+    </p>
+     <p class="month-switch">
+      <label>
+        <input name="group2" type="radio" value="October" />
+        <span>October</span>
+      </label>
+    </p>
+     <p class="month-switch">
+      <label>
+        <input name="group2" type="radio" value="November" />
+        <span>November</span>
+      </label>
+    </p>
+     <p class="month-switch">
+      <label>
+        <input name="group2" type="radio" value="December" checked />
+        <span>December</span>
+      </label>
+    </p>
   </div></li>
     <li>
 
